	PR c++/9278 	* decl.c (grokparms): Do not allow typedef-names in a '(void)' 	parmlist.

* g++.dg/other/void1.C: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@107508 138bc75d-0d04-0410-961f-82ee72b054a4